add database test